--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <h4>Contacts</h4>
                 </div>
                 <div class="col-12 col-md-6 block2InBlock7">
-                    <form action="">
+                    <form action="#">
                         <div class="form-group">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
@@ -293,9 +293,9 @@
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <label class="input-group-text" id="basic-addon1" for="emailInput">Your email:</label>
+                                    <label class="input-group-text" id="basic-addon2" for="emailInput">Your email:</label>
                                 </div>
-                                <input id="emailInput" type="text" class="form-control" placeholder="email@mail.com" aria-label="Email" aria-describedby="basic-addon1">
+                                <input id="emailInput" type="text" class="form-control" placeholder="email@mail.com" aria-label="Email" aria-describedby="basic-addon2">
                             </div>
                             <div class="input-group">
                                 <textarea id="messageTextarea" class="form-control" placeholder="Your message" aria-label="Message"></textarea>
@@ -323,7 +323,7 @@
             <!--start footer-->
             <footer class="row" id="footerOnPage">
                 <div class="col-12 blockInFooter">
-                    <p>Copyright &copy Web-Daniel, 2018 year</p>
+                    <p>Copyright &copy; Web-Daniel, 2018 year</p>
                 </div>
             </footer>
             <!--end footer-->
